--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
     "aws-sdk": "^2.1550.0",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.17"
   }
 }
